fix dark mode

--- a/Xkcd/wwwroot/css/app.css
+++ b/Xkcd/wwwroot/css/app.css
@@ -3067,6 +3067,11 @@ select{
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-slate-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
 .hover\:text-blue-600:hover {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
